--- a/teste-econverse/econverse/src/components/header/header.module.sass
+++ b/teste-econverse/econverse/src/components/header/header.module.sass
@@ -2,8 +2,10 @@
   max-width: 1280px
   margin: 0 auto
   background-color: #ece4e4
-  border-bottom: 1px solid #eaeaea
-  font-family: var(--font-poppins)
+
+  font-family: 'Poppins', sans-serif
+  font-weight: bold
+
 
 .topBar
   display: flex
@@ -26,6 +28,7 @@
   p
     margin: 0
     color: #9F9F9F
+    font-weight: bold
 
     span
       font-weight: bold
@@ -95,6 +98,7 @@
   display: flex
   justify-content: space-around
   padding: 10px 0
+  border: 1px
   background-color: #fff
   font-size: 12px
   color: #9F9F9F
@@ -104,6 +108,7 @@
     cursor: pointer
     text-transform: uppercase
     font-weight: 500
+    font-family: 'Poppins', sans-serif
 
     &:hover
       color: #F71963
