--- a/teste-econverse/econverse/src/components/title/title.module.sass
+++ b/teste-econverse/econverse/src/components/title/title.module.sass
@@ -1,25 +1,36 @@
 .sectionTitleWrapper
   max-width: 1138px
-  margin: 20px auto  // Centraliza horizontalmente
+  margin: 28px auto
   text-align: center
+  padding-top: 20px
+
+.sectionTitleWrapper p
+  color: #3F3F40
+  font-weight: bold
 
 .sectionTitle
   display: flex
   align-items: center
   justify-content: center
   position: relative
+  font-family: 'Poppins', sans-serif
+  font-weight: bold
+
 
 .line
   flex-grow: 1
   height: 1px
   background-color: #e0e0e0
   margin: 0 10px
+  font-family: 'Poppins', sans-serif
 
 .children
-  font-size: 24px
+  font-size: 30px
   font-weight: bold
   color: #F71963
   margin: 0 20px
+  font-family: 'Poppins', sans-serif
+
 
 .viewAll
   margin-top: 10px
