--- a/teste-econverse/econverse/src/components/categories/categories.module.sass
+++ b/teste-econverse/econverse/src/components/categories/categories.module.sass
@@ -6,6 +6,7 @@
   align-items: center
   padding: 20px 0
   background-color: #fff
+  font-family: 'Poppins', sans-serif
 
 .categoryWrapper
   display: flex
@@ -36,10 +37,10 @@
 
 .label
   margin-top: 10px
-  color: #333
-  font-weight: 500
+  color: #4E4E4E
+  font-weight: 600
   text-align: center
-  font-family: var(--font-poppins)
+  font-family: 'Poppins', sans-serif
   font-size: 16px
 
 .active .label
