--- a/teste-econverse/econverse/src/components/hero/hero.module.sass
+++ b/teste-econverse/econverse/src/components/hero/hero.module.sass
@@ -1,11 +1,13 @@
 .heroContainer
-  max-width: 1443px
   margin: 0 auto
   position: relative
+  width: 100%
+  max-width: 100vw
+  overflow: hidden
 
 .bannerWrapper
   position: relative
-  width: 100%
+  width: 100vw
   height: auto
 
 .bannerShadow
