--- a/teste-econverse/econverse/src/components/products/products.module.sass
+++ b/teste-econverse/econverse/src/components/products/products.module.sass
@@ -22,6 +22,8 @@
   font-size: 16px
   color: #3B3B3B
   border-right: 1px solid #e0e0e0
+  font-weight: light
+  font-family: var(--font-poppins)
 
   &:last-child
     border-right: none
@@ -35,21 +37,22 @@
 
 .sliderContainer
   position: relative
-  overflow: hidden 
+  overflow: hidden
 
 .productCard
   background-color: #fff
   border-radius: 10px
   padding: 15px
   text-align: center
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1)
+  box-shadow: 0 4px 8px #b3b3b3
   transition: transform 0.2s, box-shadow 0.2s
   display: flex
   flex-direction: column
   justify-content: space-between
   width: 270px
   height: 500px
-  margin: 0 10px
+  margin: 3px 10px
+  padding-bottom: 10px
 
   &:hover
     transform: translateY(-5px)
@@ -62,8 +65,8 @@
 
 .productName
   font-size: 16px
-  color: #333
-  font-weight: bold
+  color: #3F3F40
+  font-weight: 500
   margin-bottom: 10px
   text-align: left
 
@@ -76,7 +79,7 @@
 
 .newPrice
   font-size: 20px
-  color: #F71963
+  color: #3F3F40
   font-weight: bold
   margin-bottom: 10px
   text-align: left
@@ -120,7 +123,7 @@
   justify-content: center
 
 .swiperButtonPrev
-  left: -50px 
+  left: -50px
 
 .swiperButtonNext
-  right: -50px 
+  right: -50px
