--- a/teste-econverse/econverse/src/components/footer/footer.module.sass
+++ b/teste-econverse/econverse/src/components/footer/footer.module.sass
@@ -1,27 +1,28 @@
 .footer
   background-color: #2c2c2c
   color: #fff
-  padding: 40px 0
-  width: 100%
+  padding-top: 45px
   margin: 0 auto 0 auto
-  padding-left: 20px
-  padding-right: 20px
+
 
 .container
-  width: 100%
   margin: 0 auto
   display: flex
-  justify-content: space-between
-  align-items: flex-start
+  align-items: center
+  justify-content: space-evenly
+  position: relative
+  padding-left: 10px
 
 .section
-  flex: 1
+  width: 220px
+  padding-left: 80px
   padding: 0 20px
 
+
   h4
-    font-size: 16px
+    font-size: 13px
     font-weight: bold
-    margin-bottom: 15px
+    margin-bottom: 20px
     color: #FFFFFF
 
   ul
@@ -30,44 +31,47 @@
     margin: 0
 
     li
+      margin-top: 10px
       margin-bottom: 10px
       font-size: 12px
       color: #e1e1e1
-      font-weight: light
+      font-weight: initial
 
   .socialMedia
     display: flex
     gap: 10px
-    margin-top: 20px
+    margin-top: 80px
 
 .paymentMethods
-  display: flex
-  flex-wrap: wrap
-  gap: 10px
-  margin-top: 10px
-  justify-content: center
+ display: flex
+ flex-wrap: wrap
+ gap: 10px
+
+
 
 .paymentMethods img
-  height: 19px
-  max-width: 100%
-  flex: 1 0 calc(30% - 10px) // 30% de largura com menos espaço entre eles
-  margin-bottom: 10px
-  margin-right: 5px // ou ajuste para outro valor conforme necessário
-
+  max-width: 100px
+  height: auto
+  object-fit: contain
+  margin: 5px
 
 
 .newsletter
-  flex: 1
+  width: 380px
+  height: 260px
+  position: relative
+
+  bottom: 12px
   padding: 0 20px
   background-color: #FFFFFF
   border-radius: 10px
-  padding: 20px
+  padding: 26px
   text-align: left
 
   h4
     font-size: 18px
     font-weight: 100
-    margin-bottom: 10px
+    margin-bottom: 5px
     color: #3F3F40
 
     strong
@@ -85,13 +89,19 @@
     display: flex
     width: 100%
     gap: 20px
+    justify-content: center
+    padding-top: 15px
 
     input
       padding: 10px
+      border: 1px solid #2A2A2A
       border: 0.5
       border-radius: 5px
       font-size: 14px
       background-color: #fff
+      outline: none
+      color: #C0C0C0
+
 
     button
       padding: 10px 20px
@@ -104,13 +114,18 @@
       text-transform: uppercase
       font-size: 14px
 
+
+      &:hover
+      background-color: #d61e54
+
 .footerBottom
   padding: 10px 0
-  margin-top: 40px
+  margin-top: 24px
   display: flex
-  justify-content: space-between
+  justify-content: center
   align-items: center
   border-top: 1px solid #e1e1e1
+  gap: 300px
 
   p
     font-size: 12px
@@ -119,3 +134,7 @@
   .partnerLogos
     display: flex
     gap: 30px
+
+
+.informations
+     margin-bottom: 25px
