--- a/teste-econverse/econverse/src/components/products/products.module.sass
+++ b/teste-econverse/econverse/src/components/products/products.module.sass
@@ -3,6 +3,7 @@
   max-width: 1200px
   margin: 0 auto
   padding: 20px 0
+  padding-bottom: 20px
 
 .menu
   max-width: 1265px
@@ -53,6 +54,7 @@
   height: 500px
   margin: 3px 10px
   padding-bottom: 10px
+  margin-bottom: 20px
 
   &:hover
     transform: translateY(-5px)
